Data race accessing CollectionTruncateMarkers::_minBytesPerMarker

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc14, 7.0.21
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v8.0, v7.3, v7.0
    • CAR Team 2024-07-08
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      CollectionTruncateMarkers::_minBytesPerMarker is protected with a lock when updated but it is read concurrently without holding the lock (here and here)

            Assignee:
            Daniel Gomez Ferro
            Reporter:
            Daniel Gomez Ferro
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: