SERVER-91933 Make CollectionTruncateMarkers::_minBytesPerMarker atomic (#24599)

GitOrigin-RevId: 8fd27cf483541568d057a2bb91c537a03ecafc91